# GeoLux

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  Containerfile  Containerfile.frontend  INTEGRATION_MAP.md  KNOWN_GAPS.md  Makefile  PERSISTENCE.md  README.md  SECURITY.md  alembic.ini  podman-compose.yaml  prompt.txt  pyproject.toml
alembic/: env.py
api/: app.py  metrics.py  security.py
constraints/: loader.py
db/: database.py  models.py  repository.py  views.py
docs/: SBE.md  db-role-setup.md  k8s-effector-spec.md
engine/: action_executor.py  catalog_miner.py  classification.py  deepfield.py  evidence_enricher.py  hypothesis.py  k8s_client.py  launchpad.py  miners.py  mpc.py  nanoobs.py  objectives.py  reclamation_miner.py  replay.py  retention.py  summit_miner.py
events/: bus.py  consumers.py  models.py  nanoagents.py  publishers.py  topics.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
prompts/: deepfield_classification.yaml  hypothesis_generation.yaml  mpc_optimization.yaml  mpc_prediction.yaml  semantic_classification.yaml
receipts/: summit-aap-errors.json  summit-correlation.json  summit-reclamation.json  summit-report.json
rubrics/: constraint_classification.yaml  deepfield.yaml  geometric_stability.yaml  hypothesis_engine.yaml  integration.yaml  launchpad.yaml  llm_mpc.yaml  synthetic_client.yaml
runbooks/: classification_unclassifiable.md  deepfield_routing_fallback.md  geometric_instability_event.md  hypothesis_queue_exhausted.md  (+3 more)
(+140 files in other folders)
